fixed map width on producer show page, not overflowing any more

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -7,7 +7,8 @@
 .map_box_container_show {
   position: relative;
   height: 300px !important;
-  width: 100vw !important;
+  // width: 100vw !important;
+  width: 100% !important;
 }
 
 #map {
@@ -17,12 +18,12 @@
   width: 100%;
 }
 
-.mapboxgl-marker{
+.mapboxgl-marker {
   width: 50px !important;
   height: 50px !important;
   background-size: cover !important;
   border-radius: 50% !important;
-  border: solid 1px white
+  border: solid 1px white;
 }
 
 .mapboxgl-popup {
@@ -41,7 +42,7 @@
   padding: 0;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
 }
 
@@ -49,7 +50,7 @@
   overflow: hidden;
   height: 120px;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
   border-radius: 5px;
@@ -70,7 +71,7 @@
 .card-product-pop-up p {
   font-size: 12px;
   line-height: 1.4;
-  opacity: .7;
+  opacity: 0.7;
   margin-bottom: 0;
   margin-top: 8px;
 }
